<resources>
    <string name="app_name">Bangun Datar</string>
    <string name="share_result">Bagikan Hasil</string>
    <string name="square">Persegi</string>
    <string name="result_will_appear_here">Hasil akan tampil disini..</string>
    <string name="calculate_perimeter">Hitung Keliling</string>
    <string name="calculate_area">Hitung Luas</string>
    <string name="enter_side_length">Masukkan Sisi</string>
    <string name="square_calculator">Kalkulator Persegi</string>
    <string name="enter_length">Masukkan Panjang</string>
    <string name="enter_width">Masukkan Lebar</string>
    <string name="rectangle">Persegi Panjang</string>
    <string name="calculator">Kalkulator</string>
    <string name="contributors">Contributors</string>
    <string name="triangle">Segitiga Sama Sisi</string>
    <string name="plane_shape_calculator">2D Kalkulator</string>
</resources>
